:adhesive_bandage: Fix card alignment content for 'best-selling' and 'new-arrival'

--- a/style.css
+++ b/style.css
@@ -68,43 +68,6 @@ header img {
 }
 
 
-#brand-card-main {
-    
-    top: -50px;
-    position: relative;
-    
-    
-}
-
-#brand-card{
-    align-items: center;
-    height: 100px;
-    width: 150px;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 8px;
-    /* top: -50px; */
-   
-    
-}
-
-#brand-card a img{
-    height: 3rem;
-    width: 100%;
-    align-items: center;
-    padding: 0 25px;
-
-}
-
-#brand-card a{
-    text-decoration: none;
-    color: black;
-
-}
-
-
-
-
 #category-box {
     display: flex;
     justify-content: center;
@@ -121,12 +84,12 @@ header img {
 }
 
 .hscroll {
-    width: 600px;
-    height: 150px;
+    display: flex;
+    width: 770px;
+    height: 120px;
     background-color: white;
     border: solid 1px #ddd;
     border-radius: 20px;
-    display: none;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -139,7 +102,7 @@ header img {
 .hscroll .btn-scroll {
     background-color: white;
     color: black;
-    padding: 85px 20px;
+    padding: 85px 10px;
     border: 0;
     z-index: 1;
     box-shadow: 0 0 0px;
@@ -186,38 +149,76 @@ header img {
 
 
 
-.color-variant input[type="radio"] {
-    /* display: none; */
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    border: 2px solid #000;
-    background-color: #fff;
-    outline: none;
-    margin-right: 10px;
+#best-seller .card{
+    height: 35rem;
+    width: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-self: center;
+ 
+    
+   
+}
+
+#best-seller .inner a{
+    display: flex;
+    justify-content: center;
+    
+    
+}
+
+
+#best-seller .card img{
+    height: 15em;
+    width: 70%;
+    margin: 30px 0;
     
 
 }
-.color-variant input[type="radio"]:checked {
-    background-color: #000;
-    color: red;
+#best-seller p {
+    font-size: 1.3em;
+}
 
-  }
-
-  .color-btn {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    /* background-color: red; */
-    border: 1;
+#price-quantity {
+    position: initial;
+    top: 70%;
    
-   
-  }
+    
+}
 
 
+
+
+
+
+
+#new-arrival .card{
+    height: 35rem;
+    width: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-self: center;
+}
+
+#new-arrival .inner a{
+    display: flex;
+    justify-content: center;
+}
+
+
+
+
+#new-arrival .card img{
+    height: 15em;
+    width: 70%;
+    margin: 30px 0;
+    
+
+
+}
+#new-arrival p {
+    font-size: 1.3em;
+}
 
 
 
@@ -269,11 +270,11 @@ footer h3 {
     .hscroll {
         display: flex;
         width: 100%;
+        height: 100px;
         
     }
-    #brand-card-main {
-        display: none;
-    }
+
+   
  
 
 }
